tech section overflow-x fix

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -329,6 +329,7 @@
             .tech_carousel {
                 margin-top: .6em;
                 margin-bottom: calc(2*$fs-huge);
+                overflow-x: auto;
 
                 .logos_container {
                     display: grid;
